bugfix sidebar scrollbar width

--- a/assets/css/components/sideBar.scss
+++ b/assets/css/components/sideBar.scss
@@ -46,6 +46,11 @@
   background: $color-background;
   overflow-y: scroll;
 
+  &::-webkit-scrollbar {
+    width: 1px;
+    background: $color-background;
+  }
+
   .separator {
     background: $color-text !important;
     opacity: .20;
